fix: Solves the issue of bottom toolbar overlapping content in mobile Safari (#448)
* style: adjust style

* fix: close Splash

--- a/src/web.css
+++ b/src/web.css
@@ -398,11 +398,6 @@ body,
   sup {
     top: -0.5em;
   }
-  table {
-    text-indent: 0;
-    border-color: inherit;
-    border-collapse: collapse;
-  }
   button,
   input,
   optgroup,
@@ -471,7 +466,7 @@ body,
   figure,
   p,
   pre {
-    margin: 0;
+    margin: inherit;
   }
   fieldset {
     margin: 0;
@@ -484,8 +479,8 @@ body,
   ul,
   menu {
     list-style: none;
-    margin: 0;
-    padding: 0;
+    margin: inherit;
+    padding: inherit;
   }
   dialog {
     padding: 0;
